logs/offboard_pkg/build.make.484.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightLine()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:248:5: error: expected ‘,’ or ‘;’ before ‘if’
  248 |     if(exist_line && !line_success && line_init)
      |     ^~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
